<resources>
    <string name="app_name">FramerFriend</string>
    <string name="greeting_splashscreen">Hey farmer..!</string>
    <string name="SplashScreenQutes">Connect-Share-Exchange</string>
    <string name="image1_description">Greeting image in login screen</string>
    <string name="greeting_login_screen">Hello Farmer..!</string>
    <string name="login">login</string>
    <string name="gust">gust</string>
    <string name="login_hint">Email</string>
    <string name="hint_email">e-mail</string>
    <string name="hint_password">Enter password</string>
    <string name="forgot_password">forgot password ?</string>
    <string name="gust_login">Login as gust</string>
    <string name="register_bt">Register</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="Content_Description_mainMenu">To access The Main menu in home page</string>
    <string name="To_add_homepage">To add their product</string>
    <string name="logo_name">Get A Greap</string>
    <string name="search_text">Search Connections</string>
    <string name="search_icon">search ather user</string>
    <string name="add_feature">Add feature</string>
    <string name="add_equipment">Add equipment</string>
    <string name="rent">rent</string>
    <string name="purchase">Purchase</string>
    <string name="name">Name*</string>
    <string name="simple_image">simple image</string>
    <string name="nedd_to_do">nedd to do</string>
    <string name="surename">SureName</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="date_of_birth">Select Date</string>
    <string name="gender">Gender</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="get_location">Get location</string>
    <string name="submit">submit</string>
    <string name="userid">UserId</string>


    <string-array name="genderList">
        <item>Select</item>
        <item>Male</item>
        <item>Female</item>
        <item>Not specified</item>
    </string-array>

</resources>