<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:layout_centerVertical="true"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:src="@drawable/menu_icon"
            android:contentDescription="@string/Content_Description_mainMenu" />
        <ImageView
            android:background="@color/banner_background"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:padding="5dp"
            android:src="@drawable/add_missing_place_icon"
            android:contentDescription="@string/To_add_homepage" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/logo_name"
            android:textColor="@color/colorAccent"
            android:textSize="28sp" />
        <RelativeLayout
            android:background="@color/white"
            android:elevation="8dp"
            android:layout_below="@id/app_name"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent">
            <TextView
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:text="@string/search_text" />
            <ImageView
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_height="30dp"
                android:layout_marginEnd="15dp"
                android:layout_width="30dp"
                android:src="@drawable/search_icon"
                android:contentDescription="@string/search_icon" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:background="@drawable/card_1"
        android:elevation="8dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:layout_width="60dp">

        <ImageView
            android:layout_centerInParent="true"
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:src="@drawable/add_missing_place_icon" />
    </RelativeLayout>




</LinearLayout>