<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background"
    android:orientation="vertical"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:layout_marginTop="25sp"
                app:boxBackgroundColor="@color/home_background"
                app:boxBackgroundMode="filled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:layout_marginTop="25sp"
                app:boxBackgroundColor="@color/home_background"
                app:boxBackgroundMode="filled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/surename"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:layout_marginTop="25sp"
                app:boxBackgroundColor="@color/home_background"
                app:boxBackgroundMode="filled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phnono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phonenumber"
                    android:inputType="phone"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/et_date"
                android:layout_width="300sp"
                android:layout_height="50dp"
                android:layout_marginStart="40sp"
                android:layout_marginTop="25sp"
                android:drawableStart="@android:drawable/ic_menu_my_calendar"
                android:hint="@string/date_of_birth"
                android:inputType="date"
                app:boxBackgroundColor="@color/home_background">

            </EditText>





        </LinearLayout>
    </ScrollView>
</LinearLayout>