<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="401sp"
        android:layout_height="282sp"
        android:contentDescription="@string/image1_description"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/farmer_image" />

    <Button
        android:id="@+id/login_bt"
        android:layout_width="200dp"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="95sp"
        android:height="50dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#11F127"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword_container"
        app:layout_constraintVertical_bias="0.079"
        tools:ignore="VisualLintButtonSize" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="285dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#121413"
        android:textSize="17sp"
        app:expandedHintEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting_text"
        app:layout_constraintVertical_bias="0.309">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:minHeight="48dp"
            android:textColor="#140000"
            android:textColorHint="#140000"
            android:autofillHints="emailAddress">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextPassword_container"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:autofillHints="password"
        android:hint="@string/hint_password"
        android:minHeight="48dp"
        android:textColor="@color/text_color"

        android:textSize="18sp"
        android:visibility="visible"
    app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/green"
        app:expandedHintEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting_text"
        app:layout_constraintVertical_bias="0.233">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="280dp"
            android:layout_height="53dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:ems="15"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#300202"
            android:textColorHighlight="#DE1717"
            android:textColorHint="#5B0909"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/greeting_text"
            app:layout_constraintVertical_bias="0.234" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/greeting_text"
        android:layout_width="325dp"
        android:layout_height="72dp"
        android:layout_alignWithParentIfMissing="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="cursive"
        android:text="@string/greeting_login_screen"
        android:textAlignment="center"
        android:textColor="#046E16"
        android:textColorHighlight="#1C0202"
        android:textColorHint="#ECE7E7"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_image"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="29dp"
        android:minHeight="48dp"
        android:text="@string/forgot_password"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword_container"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/gust_text"
        android:layout_width="238dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:elegantTextHeight="true"
        android:minHeight="48dp"
        android:text="@string/gust_login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_bt"
        app:layout_constraintVertical_bias="0.115"
        app:lineHeight="60dp" />


</androidx.constraintlayout.widget.ConstraintLayout>