<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    tools:context=".LoginActivity">


    <Button
        android:id="@+id/login_bt"
        android:layout_width="121dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:height="50dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#11F127"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.803"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword_container"
        app:layout_constraintVertical_bias="0.33"
        tools:ignore="VisualLintButtonSize" />

    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="399dp"
        android:layout_height="262dp"
        android:contentDescription="@string/image1_description"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/farmer_image" />

    <Button
        android:id="@+id/register_bt"
        android:layout_width="121dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:height="50dp"
        android:text="@string/register_bt"
        android:textAlignment="center"
        android:textColor="#11F127"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword_container"
        app:layout_constraintVertical_bias="0.33"
        tools:ignore="VisualLintButtonSize" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="303dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#121413"
        android:textSize="17sp"
        app:endIconMode="clear_text"
        app:endIconTint="#6078EC"
        app:expandedHintEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting_text"
        app:layout_constraintVertical_bias="0.036"
        app:passwordToggleTint="@color/green"
        app:placeholderText="example@gmail.com">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_tfr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="16dp"
            android:autofillHints="emailAddress"
            android:textColor="#140000"
            android:textColorHint="#140000">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextPassword_container"
        android:layout_width="293dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:autofillHints="password"
        android:hint="@string/hint_password"
        android:minHeight="48dp"

        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:visibility="visible"
        app:expandedHintEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="0.085"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_tfr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:ems="15"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#300202"
            android:textColorHighlight="#DE1717"
            android:textColorHint="#5B0909"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/greeting_text"
        android:layout_width="328dp"
        android:layout_height="77dp"
        android:layout_alignWithParentIfMissing="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="cursive"
        android:text="@string/greeting_login_screen"
        android:textAlignment="center"
        android:textColor="#046E16"
        android:textColorHighlight="#1C0202"
        android:textColorHint="#ECE7E7"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_image"
        app:layout_constraintVertical_bias="0.031" />


</androidx.constraintlayout.widget.ConstraintLayout>